=== SVN

* Changed Schema::Generator#primary_key to accept calls with the type argument omitted.

* Hooks can now be prepended or appended by choice.

* Changed Model.subset to define filter method on the underlying dataset instead of the model class.

* Fixed Dataset#transform to work with array fields.

* Added Dataset#to_csv method.

* PrettyTable can now extract column names from arrayfields.

* Converted ado, dbi, odbc adapters to use arrayfields instead of hashes.

* Fixed composite key support.

* Fixed Dataset#insert_sql, update_sql to support array fields.

* Converted sqlite, mysql, postgres adapters to use arrayfields instead of hashes.

* Extended Dataset#from to auto alias sub-queries.

* Extended Dataset#from to accept hash for aliasing tables.

* Added before_update, after_update hooks.

=== 0.2.1.1 (2007-10-07)

* Added Date literalization to sqlite adapter (#60).

* Changed Model.serialize to allow calling it after the class is defined (#59).

* Fixed after_create hooks to allow calling save inside the hook (#58).

* Fixed MySQL quoting of sql functions (#57).

* Implemented rollback! global method for cancelling transactions in progress.

* Fixed =~ operator in Sequelizer.

* Fixed ODBC::Dataset#fetch_rows (thanks Dusty).

* Renamed Model.recreate_table to create_table!. recreate_table is deprecated and will issue a warning (#56).

=== 0.2.1 (2007-09-24)

* Added default implementation of Model.primary_key_hash.

* Fixed Sequel::Model() to set dataset for inherited classes.

* Rewrote Model.serialize to use Dataset#transform.

* Implemented Dataset#transform.

* Added gem spec for Windows (without ParseTree dependency).

* Added support for dynamic strings in Sequelizer (#49).

* Query branch merged into trunk.

* Implemented self-changing methods.

* Add support for ternary operator to Sequelizer.

* Fixed sequelizer to evaluate expressions if they don't involve symbols or literal strings.
